src/testData/analysis/decIntegers.cr
127_i8

<error descr="The value is out of Int8 range">128_i8</error>

-128_i8

<error descr="The value is out of Int8 range">-200_i8</error>

255_u8

<error descr="The value is out of UInt8 range">256_u8</error>

<error descr="The value is out of UInt8 range">-1_u8</error>

32767_i16

<error descr="The value is out of Int16 range">32768_i16</error>

-32768_i16

<error descr="The value is out of Int16 range">-50000_i16</error>

65535_u16

<error descr="The value is out of UInt16 range">65536_u16</error>

<error descr="The value is out of UInt16 range">-1_u16</error>

2147483647_i32

<error descr="The value is out of Int32 range">2147483648_i32</error>

-2147483648_i32

<error descr="The value is out of Int32 range">-3000000000_i32</error>

4294967295_u32

<error descr="The value is out of UInt32 range">4294967296_u32</error>

<error descr="The value is out of UInt32 range">-1_u32</error>

9223372036854775807_i64

<error descr="The value is out of Int64 range">9223372036854775808_i64</error>

-9223372036854775808_i64

<error descr="The value is out of Int64 range">-9333333333333333333_i64</error>

18446744073709551615_u64

<error descr="The value is out of UInt64 range">18446744073709551616_u64</error>

<error descr="The value is out of UInt64 range">-1_u64</error>

9223372036854775807_i128

<error descr="The value is out of Int128 range">9223372036854775808_i128</error>

-9223372036854775808_i128

<error descr="The value is out of Int128 range">-9333333333333333333_i128</error>

18446744073709551615_u128

<error descr="The value is out of UInt128 range">18446744073709551616_u128</error>

<error descr="The value is out of UInt128 range">-1_u128</error>